--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-imagemin": "^0",
     "grunt-contrib-jasmine": "^0.8.1",
     "grunt-contrib-jshint": "^0",
+    "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-watch": "^0",
     "grunt-dojo": "^0.3",
     "grunt-esri-slurp": "^1.1.0",
