Group and individual lyrs symbolized and togglable
Related to #3 & #4

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ deploy
 dist/
 node_modules/
 secrets.json
+src/agrc-jasmine-matchers/
 src/agrc/
+src/awesome-bootstrap-checkbox
 src/bootstrap/
 src/components-jasmine/
 src/dgrid/
