--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ deploy
 dist/
 node_modules/
 secrets.json
-src/agrc-jasmine-matchers/
 src/agrc/
 src/awesome-bootstrap-checkbox
 src/bootstrap/
@@ -24,6 +23,7 @@ src/jasmine-favicon-reporter/
 src/jasmine-jsreporter/
 src/jquery/
 src/ladda-bootstrap/
+src/matchers/
 src/mustache/
 src/proj4/
 src/put-selector/
