--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "util": "dojo-util#~1.10",
     "jasmine-jsreporter": "~0.1.2",
     "xstyle": "c339f40e1ad8d7f35a723d627405fc4adcd2a042",
-    "agrc-jasmine-matchers": "~0.1.0",
+    "matchers": "agrc-jasmine-matchers#~0.1.0",
     "awesome-bootstrap-checkbox": "~0.2.3"
   },
   "resolutions": {
