--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jasmine-jsreporter": "~0.1.2",
     "xstyle": "c339f40e1ad8d7f35a723d627405fc4adcd2a042",
     "matchers": "agrc-jasmine-matchers#~0.1.0",
-    "awesome-bootstrap-checkbox": "~0.2.3"
+    "awesome-bootstrap-checkbox": "~0.2.3",
+    "seiyria-bootstrap-slider": "~4.3.0"
   },
   "resolutions": {
     "xstyle": "c339f40e1ad8d7f35a723d627405fc4adcd2a042"
