route travis to container-based

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ env:
   global:
     - secure: GknL+WfOUgHCSu4HNpj6BXfr9bA3X1lO3kG1v6dJyS6HPm8OIDbg5/kedKytC2F5yOy7dn+ISHEXPPrWts1EunT2tFRkCVog7azcOcRKS9h921q1yUOSZ6obZBPni7ILEdQXQ7Re9C8vYy3y7Udvw4w/gzCV6Wnu4AV2+Gg06Ig=
     - secure: o46TK5j0I7Y/dl7MtftQ1Xj1p1549CSUPfoEGwUZZM9mu/XuXz3cs5a6IfxvlJwt7Qa97r+RosjPTUXqKht1YL4+VyIGdWgN2TNTKGsQSDgi2+LxO7HuR5PuXohD0QX5TYsTfOoVov7dOPS1kFlIuyq0xCYE3O8tbChv1kM0uL8=
+sudo: false
