--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 deploy
 dist/
 node_modules/
+scripts/.idea/
 secrets.json
 src/agrc/
 src/awesome-bootstrap-checkbox
@@ -18,6 +19,7 @@ src/dojo/
 src/dojox/
 src/esri/
 src/favico.js/
+src/handlebars/
 src/ijit/
 src/jasmine-favicon-reporter/
 src/jasmine-jsreporter/
