--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ deploy
 dist/
 node_modules/
 scripts/.idea/
+scripts/Nightly/Logs/
+scripts/Nightly/settings/__init__.py
 scripts/sddraftToolboxes/
 secrets.json
 src/agrc/
