Dissolve/optimize heavy rail
Closes #65

--- a/scripts/Nightly/settings/__init__.py.sample
+++ b/scripts/Nightly/settings/__init__.py.sample
@@ -1,4 +1,5 @@
 from prod import *
 
-SDE = '<name of sde connection in database_connections folder>'
+SDE = '<name of sde connection to fiber in database_connections folder>'
 FGDB = r'<path to BBEcon.gdb>'
+SGID = '<name of sde connection to SGID10>'
