--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "dojo": "^1.10.2",
     "grunt": "^0.4",
+    "grunt-arcgis-press": "^0.2.0",
     "grunt-bump": "^0",
     "grunt-contrib-clean": "^0",
     "grunt-contrib-compress": "^0.8.0",
@@ -20,7 +21,7 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-watch": "^0",
     "grunt-dojo": "^0.3",
-    "grunt-esri-slurp": "^1.2.0",
+    "grunt-esri-slurp": "^1.4.6",
     "grunt-if-missing": "^1",
     "grunt-newer": "^0.7.0",
     "grunt-processhtml": "^0",
