--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "bb-econ",
   "version": "1.1.0",
   "dependencies": {
-    "agrc": "agrc-widgets#~2.10",
+    "agrc": "agrc-widgets#2.11.2",
     "bootstrap": "~3.2",
     "dijit": "~1.10",
     "dojo": "~1.10",
