--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bb-econ",
-    "version": "1.4.1",
+    "version": "1.5.0-0",
     "main": "main",
     "description": "Broadband Economic Development",
     "homepage": "https://github.com/agrc/AGRCJavaScriptProjectBoilerPlate",
