--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bb-econ",
-  "version": "1.5.0-0",
+  "version": "1.5.0",
   "dependencies": {
     "agrc": "agrc-widgets#2.11.2",
     "bootstrap": "~3.2",
