--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bb-econ",
-  "version": "1.5.0-0",
+  "version": "1.5.0",
   "homepage": "https://github.com/agrc/bb-econ",
   "repository": {
     "type": "git",
