--- a/bower.json
+++ b/bower.json
@@ -12,13 +12,13 @@
     "stubmodule": "0.6.1",
     "util": "dojo-util#~1.10",
     "jasmine-jsreporter": "~0.1.2",
-    "xstyle": "8a80773bed850a3230451c6a38c1386e180b6070",
+    "xstyle": "~0.3",
     "matchers": "agrc-jasmine-matchers#~0.1.0",
     "awesome-bootstrap-checkbox": "~0.2.3",
     "seiyria-bootstrap-slider": "~4.3.0",
     "handlebars": "~2.0.0"
   },
   "resolutions": {
-    "xstyle": "8a80773bed850a3230451c6a38c1386e180b6070"
+    "xstyle": "~0.3"
   }
 }
