--- a/bower.json
+++ b/bower.json
@@ -4,21 +4,24 @@
   "dependencies": {
     "agrc": "agrc-widgets#2.11.2",
     "bootstrap": "~3.2",
-    "dijit": "~1.10",
-    "dojo": "~1.10",
-    "dojox": "~1.10",
     "ijit": "agrc-ijit#3.1.0",
     "jasmine-favicon-reporter": "*",
     "stubmodule": "0.6.1",
-    "util": "dojo-util#~1.10",
     "jasmine-jsreporter": "~0.1.2",
     "xstyle": "~0.3",
     "matchers": "agrc-jasmine-matchers#~0.1.0",
     "awesome-bootstrap-checkbox": "~0.2.3",
     "seiyria-bootstrap-slider": "~4.3.0",
-    "handlebars": "~2.0.0"
+    "handlebars": "~2.0.0",
+    "layer-selector": "agrc-layer-selector#~0.4.0"
   },
   "resolutions": {
-    "xstyle": "~0.3"
+    "xstyle": "~0.3",
+    "bootstrap": "~3.2",
+    "dgrid": "~0.3.16",
+    "dojo": "v1.10.4/esri-3.14.0",
+    "dojox": "v1.10.4/esri-3.14.0",
+    "dijit": "v1.10.4/esri-3.14.0",
+    "util": "v1.10.4/esri-3.14.0"
   }
 }
