--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
+.DS_Store
+.grunt/
 *.odc
 *.pyc
 *.sde
 *.sublime-workspace
-.DS_Store
-.grunt/
 deploy
 dist/
 node_modules/
 scripts/.idea/
 scripts/Nightly/Logs/
+scripts/Nightly/settings.py
 scripts/Nightly/settings/__init__.py
 scripts/sddraftToolboxes/
 secrets.json
+src/agrc-jasmine-matchers/
 src/agrc/
 src/awesome-bootstrap-checkbox
 src/bootstrap/
@@ -20,6 +22,7 @@ src/dgrid/
 src/dijit/
 src/dojo/
 src/dojox/
+src/dstore/
 src/esri/
 src/favico.js/
 src/handlebars/
@@ -29,6 +32,7 @@ src/jasmine-jsreporter/
 src/jquery-bridget
 src/jquery/
 src/ladda-bootstrap/
+src/layer-selector/
 src/matchers/
 src/modernizr/
 src/mustache/
