--- a/bower.json
+++ b/bower.json
@@ -13,15 +13,18 @@
     "awesome-bootstrap-checkbox": "~0.2.3",
     "seiyria-bootstrap-slider": "~4.3.0",
     "handlebars": "~2.0.0",
-    "layer-selector": "agrc-layer-selector#eefe964269efade41e28c915fd5004fc20ddddfe"
+    "layer-selector": "agrc-layer-selector#~1.0.0",
+    "esri": "arcgis-js-api#~3.18.0"
   },
   "resolutions": {
-    "xstyle": "~0.3",
+    "esri": "~3.18.0",
     "bootstrap": "~3.2",
-    "dgrid": "~0.3.16",
-    "dojo": "v1.10.4/esri-3.14.0",
-    "dojox": "v1.10.4/esri-3.14.0",
-    "dijit": "v1.10.4/esri-3.14.0",
-    "util": "v1.10.4/esri-3.14.0"
+    "xstyle": "~0.3",
+    "dgrid": "0.3.17/esri-3.14.0",
+    "dstore": "v1.1.1",
+    "util": "v1.11.2/esri-3.18.0",
+    "dojo": "v1.11.2/esri-3.18.0",
+    "dijit": "v1.11.2/esri-3.18.0",
+    "dojox": "v1.11.2/esri-3.18.0"
   }
 }
