--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,14 @@
     "seiyria-bootstrap-slider": "~9.5.3",
     "handlebars": "~2.0.0",
     "layer-selector": "agrc-layer-selector#~1.0.0",
-    "esri": "arcgis-js-api#~3.18.0"
+    "esri": "arcgis-js-api#~3.18.0",
+    "jquery": "jquery#~2.2.0"
   },
   "resolutions": {
     "esri": "~3.18.0",
     "bootstrap": "~3.2",
     "xstyle": "~0.3",
     "dgrid": "0.3.17/esri-3.14.0",
-    "dstore": "v1.1.1",
-    "util": "v1.11.2/esri-3.18.0",
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
     "dojox": "v1.11.2/esri-3.18.0"
