add sherlock for searching cities
Related to #108

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ src/mustache/
 src/proj4/
 src/put-selector/
 src/seiyria-bootstrap-slider/
+src/sherlock/
 src/spin.js/
 src/spinjs/
 src/stubmodule/
