--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "handlebars": "~2.0.0",
     "layer-selector": "agrc-layer-selector#~1.0.0",
     "esri": "arcgis-js-api#~3.18.0",
-    "jquery": "jquery#~2.2.0"
+    "jquery": "jquery#~2.2.0",
+    "sherlock": "agrc-sherlock#~1.0.0"
   },
   "resolutions": {
     "esri": "~3.18.0",
@@ -24,6 +25,10 @@
     "dgrid": "0.3.17/esri-3.14.0",
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
-    "dojox": "v1.11.2/esri-3.18.0"
+    "dojox": "v1.11.2/esri-3.18.0",
+    "agrc": "~5.0",
+    "spinjs": "~2.3.2",
+    "util": "v1.11.2/esri-3.18.0",
+    "dstore": "v1.1.1"
   }
 }
