--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "dojo": "^1.10.2",
+    "eslint-plugin-html": "^2.0.1",
     "grunt": "^1.0.1",
     "grunt-arcgis-press": "^0.2.0",
     "grunt-bump": "^0.8.0",
@@ -17,10 +18,10 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^1.0.3",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.1",
+    "grunt-eslint": "^19.0.0",
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.0",
