--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jasmine": "^1.0.3",
-    "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-uglify": "^2.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dojo": "^1.1.1",
