--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.7.0-8",
   "dependencies": {
     "agrc": "agrc-widgets#~5.0",
-    "bootstrap": "~3.2",
+    "bootstrap": "3.3.6",
     "ijit": "agrc-ijit#3.1.0",
     "jasmine-favicon-reporter": "*",
     "stubmodule": "0.6.1",
@@ -21,15 +21,12 @@
   },
   "resolutions": {
     "esri": "~3.18.0",
-    "bootstrap": "~3.2",
     "xstyle": "~0.3",
     "dgrid": "0.3.17/esri-3.14.0",
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
     "dojox": "v1.11.2/esri-3.18.0",
     "agrc": "~5.0",
-    "spinjs": "~2.3.2",
-    "util": "v1.11.2/esri-3.18.0",
-    "dstore": "v1.1.1"
+    "spinjs": "~2.3.2"
   }
 }
