--- a/bower.json
+++ b/bower.json
@@ -20,13 +20,15 @@
     "proj4": "^2.3.17"
   },
   "resolutions": {
+    "xstyle": "v0.3.2",
+    "agrc": "~5.0",
     "esri": "~3.18.0",
-    "xstyle": "~0.3",
     "dgrid": "0.3.17/esri-3.14.0",
+    "spinjs": "~2.3.2",
+    "dojox": "v1.11.2/esri-3.18.0",
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
-    "dojox": "v1.11.2/esri-3.18.0",
-    "agrc": "~5.0",
-    "spinjs": "~2.3.2"
+    "util": "v1.11.2/esri-3.18.0",
+    "dstore": "v1.1.1"
   }
 }
