--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
-  - "4"
+  - "6"
 before_install:
-  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
   - npm install -g grunt-cli
   - npm install -g bower
+  - npm install -g npm
   - bower install
+  - npm update
+  - bower update
 notifications:
   email:
     on_success: change
