--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
     "util": "v1.11.2/esri-3.18.0",
-    "dstore": "v1.1.1"
+    "dstore": "v1.1.1",
+    "moment": "2.14.1",
+    "dojo-themes": "1.11.2"
   }
 }
