--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.0",
     "grunt-ssh": "^0.12.9",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "uglify-js": "^2.6.4"
   },
   "scripts": {
