--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bb-econ",
-  "version": "2.0.0-2",
+  "version": "2.0.0",
   "dependencies": {
     "agrc": "agrc-widgets#~6.0",
     "bootstrap": "3.3.6",
