--- a/bower.json
+++ b/bower.json
@@ -21,16 +21,12 @@
   },
   "resolutions": {
     "xstyle": "v0.3.2",
-    "agrc": "~6.0",
     "esri": "~3.18.0",
     "dgrid": "0.3.17/esri-3.14.0",
     "spinjs": "~2.3.2",
     "dojox": "v1.11.2/esri-3.18.0",
     "dojo": "v1.11.2/esri-3.18.0",
     "dijit": "v1.11.2/esri-3.18.0",
-    "util": "v1.11.2/esri-3.18.0",
-    "dstore": "v1.1.1",
-    "moment": "2.14.1",
-    "dojo-themes": "1.11.2"
+    "dstore": "v1.1.1"
   }
 }
