--- a/lib/app/package.json
+++ b/lib/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bb-econ",
-    "version": "2.1.0-2",
+    "version": "2.1.0",
     "main": "main",
     "description": "Broadband Economic Development",
     "homepage": "https://github.com/agrc/AGRCJavaScriptProjectBoilerPlate",
