add moment resolution

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "dstore": "v1.1.1",
     "dojox": "v1.11.2/esri-3.18.0",
     "util": "v1.11.2/esri-3.18.0",
-    "spinjs": "~2.3.2"
+    "spinjs": "~2.3.2",
+    "moment": "~2.14"
   }
 }
