--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "babel-preset-latest": "^6.22.0",
     "dojo": "^1.10.2",
     "eslint-plugin-html": "^2.0.1",
-    "grunt": "^1.0.1",
+    "grunt": "1.0.3",
     "grunt-babel": "^6.0.0",
     "grunt-bump": "^0.8.0",
+    "grunt-cache-breaker": "2.0.1",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-compress": "^1.3.0",
+    "grunt-contrib-compress": "1.4.3",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jasmine": "^1.0.3",
+    "grunt-contrib-imagemin": "2.0.1",
+    "grunt-contrib-jasmine": "2.0.1",
     "grunt-contrib-stylus": "^1.2.0",
-    "grunt-contrib-uglify": "^2.1.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-uglify": "3.4.0",
+    "grunt-contrib-watch": "1.1.0",
     "grunt-dojo": "^1.1.1",
     "grunt-eslint": "^19.0.0",
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.2.0",
     "grunt-processhtml": "^0.4.0",
     "grunt-ssh": "^0.12.9",
-    "phantomjs-prebuilt": "^2.1.7",
-    "uglify-js": "^2.6.4"
+    "uglify-js": "3.4.6"
   },
   "scripts": {
     "test": "grunt travis --verbose"
