fix: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ironing-board",
+  "name": "locate",
   "version": "2.2.0-0",
   "homepage": "https://github.com/agrc/ironing-board",
   "repository": {
