--- a/lib/app/package.json
+++ b/lib/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bb-econ",
+    "name": "locate",
     "version": "2.2.0-0",
     "main": "main",
     "description": "Broadband Economic Development",
