--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locate",
-  "version": "2.2.0",
+  "version": "2.2.1-0",
   "homepage": "https://github.com/agrc/ironing-board",
   "repository": {
     "type": "git",
