--- a/lib/app/package.json
+++ b/lib/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "locate",
-    "version": "2.2.1-2",
+    "version": "2.2.1",
     "main": "main",
     "description": "Broadband Economic Development",
     "homepage": "https://github.com/agrc/AGRCJavaScriptProjectBoilerPlate",
