--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "esri": "arcgis-js-api#~3.18.0",
     "jquery": "jquery#~2.2.0",
     "sherlock": "agrc-sherlock#~1.1.0",
-    "proj4": "2.3.17"
+    "proj4": "2.3.17",
+    "dijit-themes": "https://github.com/dojo/dijit-themes.git#1.14.0"
   },
   "resolutions": {
     "esri": "~3.18.0",
@@ -29,7 +30,6 @@
     "dojox": "v1.11.2/esri-3.18.0",
     "util": "v1.11.2/esri-3.18.0",
     "spinjs": "~2.3.2",
-    "moment": "~2.14",
-    "dojo-themes": "~1.11"
+    "moment": "~2.14"
   }
 }
