--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "locate",
-  "version": "2.3.0",
+  "version": "2.3.1-0",
   "dependencies": {
     "agrc": "agrc-widgets#~6.0",
     "bootstrap": "3.3.6",
