--- a/bower.json
+++ b/bower.json
@@ -14,22 +14,21 @@
     "seiyria-bootstrap-slider": "~9.5.3",
     "handlebars": "~2.0.0",
     "layer-selector": "agrc-layer-selector#~1.1.0",
-    "esri": "arcgis-js-api#~3.18.0",
+    "esri": "arcgis-js-api#~3.35.0",
     "jquery": "jquery#~2.2.0",
     "sherlock": "agrc-sherlock#~1.1.0",
     "proj4": "2.3.17",
     "dijit-themes": "https://github.com/dojo/dijit-themes.git#1.14.0"
   },
   "resolutions": {
-    "esri": "~3.18.0",
-    "xstyle": "~0.3",
-    "dgrid": "0.3.17/esri-3.14.0",
-    "dijit": "v1.11.2/esri-3.18.0",
-    "dojo": "v1.11.2/esri-3.18.0",
-    "dstore": "v1.1.1",
-    "dojox": "v1.11.2/esri-3.18.0",
-    "util": "v1.11.2/esri-3.18.0",
-    "spinjs": "~2.3.2",
-    "moment": "~2.14"
+    "dojo": "v1.14.2/esri-3.28.0",
+    "dojox": "v1.14.2/esri-3.28.0",
+    "dijit": "v1.14.2/esri-3.28.0",
+    "util": "v1.14.2/esri-3.28.0",
+    "dgrid": "0.3.17/esri-3.20.0",
+    "dstore": "1.1.2",
+    "moment": "2.24.0",
+    "esri": "~3.35.0",
+    "xstyle": "0.3.2"
   }
 }
