feat(build): implement wonkavision for deploys

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ node_modules/
 scripts/geocoding_cache.json
 scripts/Logs/
 scripts/settings_ib/__init__.py
-secrets.json
 src/
+.env-cmdrc.json
+lib/secrets.json
