--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "uglify-js": "3.4.6"
   },
   "scripts": {
-    "deploy:prod": "env-cmd -e production wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e production wonkavision unzip wwwroot/locate",
-    "deploy:stage": "env-cmd -e staging wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e staging wonkavision unzip wwwroot/locate",
+    "deploy:prod": "wonkavision clean && wonkavision zip ./dist && env-cmd -e production wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e production wonkavision unzip wwwroot/locate",
+    "deploy:stage": "wonkavision clean && wonkavision zip ./dist && env-cmd -e staging wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e staging wonkavision unzip wwwroot/locate",
     "test": "grunt travis"
   }
 }
