chore: synchronize package and update bower resolutions

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "dstore": "1.1.2",
     "moment": "2.24.0",
     "esri": "~3.35.0",
-    "xstyle": "0.3.2"
+    "xstyle": "0.3.2",
+    "spinjs": "~2.3.2"
   }
 }
