--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,7 +3,7 @@ name: firebase deploy
 on:
   push:
     paths:
-      - "_src/**"
+      - "lib/**"
       - ".github/workflows/nodejs.yml"
       - "package.json"
 
