--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "devDependencies": {
     "@agrc/wonkavision": "^1.0.2",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-preset-latest": "^6.22.0",
     "dojo": "^1.16.4",
     "env-cmd": "^10.1.0",
     "eslint-plugin-html": "^6.1.2",
