--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "locate",
   "version": "2.4.7",
-  "homepage": "https://github.com/agrc/ironing-board",
+  "homepage": "https://github.com/agrc/locate",
   "repository": {
     "type": "git",
-    "url": "https://github.com/agrc/ironing-board.git"
+    "url": "https://github.com/agrc/locate.git"
   },
   "devDependencies": {
     "@agrc/wonkavision": "^1.0.2",
@@ -32,10 +32,5 @@
     "grunt-newer": "^1.3.0",
     "grunt-processhtml": "^0.4.2",
     "uglify-js": "3.13.7"
-  },
-  "scripts": {
-    "deploy:prod": "wonkavision clean && wonkavision zip ./dist && env-cmd -e production wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e production wonkavision unzip wwwroot/locate",
-    "deploy:stage": "wonkavision clean && wonkavision zip ./dist && env-cmd -e staging wonkavision ship ./deploy/deploy.zip wwwroot/locate && env-cmd -e staging wonkavision unzip wwwroot/locate",
-    "test": "grunt travis"
   }
 }
