chore: add npm caching

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,15 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+
       - run: npm ci
 
       - run: npm i -g grunt-cli bower
@@ -47,6 +56,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
 
       - run: npm ci
 
@@ -83,6 +101,15 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+
       - run: npm ci
 
       - run: npm i -g grunt-cli bower
@@ -99,6 +126,7 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-firebase-
             ${{ runner.OS }}-
+
       - name: Firebase Deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
