--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,9 @@ on:
     paths:
       - "lib/**"
       - ".github/workflows/nodejs.yml"
-      - "package.json"
+      - "package-lock.json"
+      - "firebase.json"
+      - ".firebaserc"
       - "bower.json"
 
 jobs:
