--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "type": "git",
     "url": "https://github.com/agrc/locate.git"
   },
+  "scripts": {
+    "start": "grunt",
+    "build:stage": "grunt build-stage",
+    "build:prod": "grunt build-prod",
+    "postinstall": "bower install",
+    "test": "grunt test"
+  },
   "devDependencies": {
     "@agrc/wonkavision": "^1.0.2",
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@babel/preset-env": "^7.14.2",
+    "bower": "^1.8.12",
     "dojo": "^1.16.4",
     "env-cmd": "^10.1.0",
     "eslint-plugin-html": "^6.1.2",
