--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "devDependencies": {
     "@agrc/wonkavision": "^1.0.2",
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@babel/preset-env": "^7.14.2",
-    "bower": "^1.8.12",
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "bower": "^1.8.13",
     "dojo": "^1.16.4",
     "env-cmd": "^10.1.0",
-    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-html": "^6.2.0",
     "grunt": "1.4.1",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
@@ -35,10 +35,10 @@
     "grunt-contrib-uglify": "5.0.1",
     "grunt-contrib-watch": "1.1.0",
     "grunt-dojo": "^1.1.2",
-    "grunt-eslint": "^23.0.0",
+    "grunt-eslint": "^24.0.0",
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.3.0",
     "grunt-processhtml": "^0.4.2",
-    "uglify-js": "3.13.7"
+    "uglify-js": "^3.14.5"
   }
 }
