--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,90 +3,77 @@ name: firebase deploy
 on:
   push:
     paths:
-      - "lib/**"
-      - ".github/workflows/nodejs.yml"
-      - "package-lock.json"
-      - "firebase.json"
       - ".firebaserc"
+      - ".github/workflows/nodejs.yml"
       - "bower.json"
+      - "firebase.json"
       - "GruntFile.js"
+      - "lib/**"
+      - "package-lock.json"
+
+concurrency:
+  group: '${{ github.head_ref || github.ref }}'
+  cancel-in-progress: true
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  test-unit:
+  test:
     runs-on: ubuntu-latest
-    environment:
-      name: dev
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: ⎔ Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
-          cache: 'npm'
+          node-version: lts/*
+          cache: npm
 
-      - run: npm ci
+      - name: 📥 Download dependencies
+        run: npm ci
 
-      - run: npm test
+      - name: 🧪 Run tests
+        run: npm test
 
   deploy-dev:
-    needs: [test-unit]
+    needs: test
     runs-on: ubuntu-latest
     environment:
       name: dev
       url: https://locate.dev.utah.gov
-    if: github.ref != 'refs/heads/main'
+    if: github.ref == 'refs/heads/dev'
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - id: auth
+        name: 🗝️ Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.4.4
         with:
-          node-version: '14'
-          cache: 'npm'
+          access_token_scopes: 'email, openid, https://www.googleapis.com/auth/cloud-platform, https://www.googleapis.com/auth/firebase'
+          workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          create_credentials_file: true
 
-      - run: npm ci
-
-      - run: npm run build:stage
-
-      - name: Firebase Deploy
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: ⎔ Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.SERVICE_ACCOUNT }}'
-          channelId: live
-          projectId: '${{ secrets.PROJECT_ID }}'
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          node-version: lts/*
+          cache: npm
 
-  deploy-prod:
-    needs: [test-unit]
-    runs-on: ubuntu-latest
-    environment:
-      name: prod
-      url: https://locate.utah.gov
-    if: github.ref == 'refs/heads/main'
+      - name: 📥 Download dependencies
+        run: npm ci
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - name: 🏗 Run build script
+        run: npm run build:stage
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          cache: 'npm'
-
-      - run: npm ci
-
-      - run: npm run build:prod
-
-      - name: Cache firebase
-        uses: actions/cache@v2
+      - name: 🪣 Cache firebase
+        uses: actions/cache@v3
         with:
           path: ./.firebase
           key: ${{ runner.OS }}-firebase-${{ hashFiles('**/*.cache') }}
@@ -94,12 +81,60 @@ jobs:
             ${{ runner.OS }}-firebase-
             ${{ runner.OS }}-
 
-      - name: Firebase Deploy
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: 🚀 Firebase deploy
+        run: >
+          npx firebase-tools deploy
+          --only hosting
+          --project ${{ secrets.PROJECT_ID }}
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
+
+  deploy-prod:
+    needs: test
+    runs-on: ubuntu-latest
+    environment:
+      name: prod
+      url: https://locate.utah.gov
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v3
+
+      - id: auth
+        name: 🗝️ Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0.4.4
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.SERVICE_ACCOUNT }}'
-          channelId: live
-          projectId: '${{ secrets.PROJECT_ID }}'
+          access_token_scopes: 'email, openid, https://www.googleapis.com/auth/cloud-platform, https://www.googleapis.com/auth/firebase'
+          workload_identity_provider: ${{ secrets.IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          create_credentials_file: true
+
+      - name: ⎔ Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          cache: npm
+
+      - name: 📥 Download dependencies
+        run: npm ci
+
+      - name: 🏗 Run build script
+        run: npm run build:prod
+
+      - name: 🪣 Cache firebase
+        uses: actions/cache@v3
+        with:
+          path: ./.firebase
+          key: ${{ runner.OS }}-firebase-${{ hashFiles('**/*.cache') }}
+          restore-keys: |
+            ${{ runner.OS }}-firebase-
+            ${{ runner.OS }}-
+
+      - name: 🚀 Firebase deploy
+        run: >
+          npx firebase-tools deploy
+          --only hosting
+          --project ${{ secrets.PROJECT_ID }}
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
