--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
-    "bower": "^1.8.13",
-    "dojo": "^1.16.4",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "bower": "^1.8.14",
+    "dojo": "^1.17.2",
     "env-cmd": "^10.1.0",
     "eslint-plugin-html": "^6.2.0",
     "grunt": "1.5.3",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-cache-breaker": "2.0.1",
-    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "4.0.0",
     "grunt-contrib-jasmine": "3.0.0",
     "grunt-contrib-stylus": "^1.2.0",
-    "grunt-contrib-uglify": "5.0.1",
+    "grunt-contrib-uglify": "^5.2.1",
     "grunt-contrib-watch": "1.1.0",
     "grunt-dojo": "^1.1.2",
     "grunt-eslint": "^24.0.0",
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.3.0",
-    "grunt-processhtml": "^0.4.2",
+    "grunt-processhtml": "^0.4.3",
     "uglify-js": "^3.14.5"
   }
 }
