--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.18.9",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-env": "^7.18.9",
     "bower": "^1.8.14",
     "dojo": "^1.17.2",
     "env-cmd": "^10.1.0",
-    "eslint-plugin-html": "^6.2.0",
-    "grunt": "1.5.3",
+    "eslint-plugin-html": "^7.1.0",
+    "grunt": "^1.5.3",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-cache-breaker": "2.0.1",
@@ -38,6 +38,6 @@
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.3.0",
     "grunt-processhtml": "^0.4.3",
-    "uglify-js": "^3.16.2"
+    "uglify-js": "^3.16.3"
   }
 }
