--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,11 @@
     "dojo": "v1.14.2/esri-3.28.0",
     "dojox": "v1.14.2/esri-3.28.0",
     "dijit": "v1.14.2/esri-3.28.0",
-    "util": "v1.14.2/esri-3.28.0",
     "dgrid": "0.3.17/esri-3.20.0",
     "dstore": "1.1.2",
-    "moment": "2.24.0",
     "esri": "~3.35.0",
     "xstyle": "0.3.2",
-    "spinjs": "~2.3.2"
+    "spinjs": "~2.3.2",
+    "agrc": "6.1.6"
   }
 }
