ci: add missing inputs and move sn inputs to deploy action

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -48,3 +48,4 @@ jobs:
           project-id: ${{ secrets.PROJECT_ID }}
           preview: yes
           build-command: npm run build:stage
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
