--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "esri": "~3.35.0",
     "xstyle": "0.3.2",
     "spinjs": "~2.3.2",
-    "agrc": "6.1.6"
+    "agrc": "6.1.6",
+    "dgrid1": "v1.3.3/esri-3.42.0"
   }
 }
