--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@babel/preset-env": "^7.20.2",
     "bower": "^1.8.14",
     "dojo": "^1.17.3",
     "env-cmd": "^10.1.0",
     "eslint-plugin-html": "^7.1.0",
-    "grunt": "^1.5.3",
+    "grunt": "^1.6.1",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-cache-breaker": "2.0.1",
@@ -29,7 +29,7 @@
     "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "4.0.0",
-    "grunt-contrib-jasmine": "3.0.0",
+    "grunt-contrib-jasmine": "^4.0.0",
     "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "1.1.0",
