fix: update enterprise zones for 2022 year data
Also, convert MXD to pro-based project.

Closes #276

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ scripts/settings_ib/__init__.py
 src/
 .env-cmdrc.json
 lib/secrets.json
+maps/ImportLog
+maps/Index
+maps/.backups
+maps/Default.gdb
