fix: switch out SGID-based UTA data for UTA's portal
Ref: https://github.com/agrc/porter/issues/331, https://github.com/agrc/porter/issues/332, https://github.com/agrc/porter/issues/334,
https://github.com/agrc/porter/issues/333

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "firebaserc",
     "GOED",
     "hostingchannels",
+    "lightrail",
+    "lyrs",
     "prebuild",
     "QUALTRICS",
     "seiyria",
