--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
+    "@babel/core": "^7.25.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
     "bower": "^1.8.14",
     "dojo": "^1.17.3",
     "env-cmd": "^10.1.0",
-    "eslint-plugin-html": "^8.1.1",
+    "eslint-plugin-html": "^8.1.2",
+    "globals": "^15.10.0",
     "grunt": "^1.6.1",
     "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-cache-breaker": "2.0.1",
     "grunt-contrib-clean": "^2.0.1",
-    "grunt-contrib-connect": "^4.0.0",
+    "grunt-contrib-connect": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "4.0.0",
     "grunt-contrib-jasmine": "^4.0.0",
@@ -34,10 +35,10 @@
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "1.1.0",
     "grunt-dojo": "^1.1.2",
-    "grunt-eslint": "^24.3.0",
+    "grunt-eslint": "^25.0.0",
     "grunt-if-missing": "^1.0.1",
     "grunt-newer": "^1.3.0",
     "grunt-processhtml": "^0.4.4",
-    "uglify-js": "~3.17.4"
+    "uglify-js": "~3.19.3"
   }
 }
